apps/clusterapi/providers/talos-controlplane/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cacppt-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
    control-plane: controller-manager
  name: cacppt-controller-manager-metrics-service
  namespace: cacppt-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    cluster.x-k8s.io/provider: control-plane-talos
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cacppt-webhook-service
  namespace: cacppt-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    cluster.x-k8s.io/provider: control-plane-talos
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
    control-plane: controller-manager
  name: cacppt-controller-manager
  namespace: cacppt-system
spec:
  replicas: 1
  selector:
    matchLabels:
      cluster.x-k8s.io/provider: control-plane-talos
      control-plane: controller-manager
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        cluster.x-k8s.io/provider: control-plane-talos
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --metrics-bind-addr=127.0.0.1:8080
        - --enable-leader-election
        command:
        - /manager
        image: ghcr.io/siderolabs/cluster-api-control-plane-talos-controller:v0.5.3
        imagePullPolicy: Always
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: cacppt-webhook-service-cert
status: {}
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cacppt-system/cacppt-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cacppt-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: cacppt-webhook-service
      namespace: cacppt-system
      path: /mutate-controlplane-cluster-x-k8s-io-v1alpha3-taloscontrolplane
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: default.taloscontrolplane.controlplane.cluster.x-k8s.io
  rules:
  - apiGroups:
    - controlplane.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    resources:
    - taloscontrolplanes
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cacppt-system/cacppt-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: control-plane-talos
    clusterctl.cluster.x-k8s.io: ""
  name: cacppt-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cacppt-webhook-service
      namespace: cacppt-system
      path: /validate-controlplane-cluster-x-k8s-io-v1alpha3-taloscontrolplane
  failurePolicy: Fail
  name: validate.taloscontrolplane.controlplane.cluster.x-k8s.io
  rules:
  - apiGroups:
    - controlplane.cluster.x-k8s.io
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - taloscontrolplanes
  sideEffects: None
